# rattler-build-parser-tests

./: LICENSE  README.md  generate_rendering_tests.py  pixi.toml  render.sh  run_rendering_tests.py
rendering-tests/: generation_metadata.json
rendering-tests/7zip/expected/: linux_64_.json  linux_aarch64_.json  linux_ppc64le_.json  osx_64_.json  osx_arm64_.json  win_64_.json
rendering-tests/7zip/recipe/: build.bat  build.sh  recipe.yaml
rendering-tests/a2a-sdk/expected/: linux_64_.json
rendering-tests/a2a-sdk/recipe/: recipe.yaml
rendering-tests/a2wsgi/expected/: linux_64_.json
rendering-tests/a2wsgi/recipe/: recipe.yaml
rendering-tests/aardvark-dns/expected/: linux_64_.json  osx_64_.json
rendering-tests/aardvark-dns/recipe/: recipe.yaml
rendering-tests/acachecontrol/expected/: linux_64_.json
rendering-tests/acachecontrol/recipe/: recipe.yaml
rendering-tests/accelerate/expected/: linux_64_.json
rendering-tests/acme/expected/: linux_64_.json
rendering-tests/acme/recipe/: recipe.yaml
rendering-tests/acp-mcp-server/expected/: linux_64_.json
rendering-tests/acpica-tools/expected/: linux_64_.json  linux_aarch64_.json  linux_ppc64le_.json  osx_64_.json  osx_arm64_.json
rendering-tests/acpica-tools/recipe/: recipe.yaml
rendering-tests/acres/expected/: linux_64_.json
rendering-tests/acres/recipe/: recipe.yaml
rendering-tests/actionlint/expected/: linux_64_.json  linux_aarch64_.json  osx_64_.json  (+3 more)
rendering-tests/lua-lpeg/recipe/: CMakeLists.txt  build.bat  build.sh  recipe.yaml
rendering-tests/nvtx-c/recipe/test_cmake/: CMakeLists.txt
(+27005 files in other folders)
